# Hermes

./: .gitignore  .main.py.swp  LICENSE.md  README.md  app.py  bot_commands.py  main.py  pyproject.toml  requirements.txt  zappa_settings.json
