[tool.poetry]
name = "Hermes"
version = "0.1.0"
description = "Hermes is a Telegram bot that provides data on different financial assets."
authors = ["Jorge Castro <jorgec535@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
yfinance = "^0.1.68"
python-dotenv = "^0.19.2"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
